# terminal-chat

./: .env.example  Cargo.toml  LICENSE.md  README.md
chat-client/: Cargo.toml
chat-client/src/: main.rs
chat-client/src/client/: mod.rs
chat-client/src/ui/: mod.rs
cli/: Cargo.toml
cli/src/: args.rs  commands.rs  lib.rs  mod.rs
cli/src/auth/: identity_manager.rs  mod.rs  system.rs  types.rs  verification.rs
cli/src/commands/: config.rs  identity.rs  menu.rs  mod.rs  p2p.rs
cli/src/ui/: interactive.rs  mod.rs
cli/src/ui/menu/: main_menu.rs  menu_item.rs  mod.rs
client/: Cargo.toml
client/src/: main.rs
client/src/chat/: mod.rs
client/src/connection/: mod.rs
client/src/ui/: mod.rs
identity-gen/: Cargo.toml
identity-gen/src/: cli.rs  crypto.rs  error.rs  file_manager.rs  identity.rs  lib.rs  main.rs
launcher/: Cargo.toml
launcher/src/: lib.rs  main.rs
p2p-chat/: Cargo.toml
p2p-chat/src/: main.rs
p2p-chat/src/client/: constants.rs  display.rs  events.rs  history.rs  mod.rs
p2p-core/: Cargo.toml
p2p-core/src/: lib.rs  main.rs  secure_client.rs
p2p-core/src/cli/: args.rs  help.rs  mod.rs
p2p-core/src/client/: commands.rs  constants.rs  history.rs  mod.rs
p2p-core/src/client/core/: client.rs  command_handler.rs  event_handler.rs  mod.rs
p2p-core/src/ui/: display.rs  input.rs  messages.rs  mod.rs
server/: Cargo.toml
server/src/: main.rs
server/src/client/: mod.rs
server/src/handler/: mod.rs
server/src/state/: mod.rs
shared/: Cargo.toml
shared/src/: constants.rs  lib.rs
shared/src/config/: mod.rs
shared/src/crypto/: dilithium_ops.rs  handshake.rs  identity_utils.rs  kyber_kex.rs  message_crypto.rs  mod.rs  session.rs
shared/src/message/: mod.rs
shared/src/p2p/: discovery.rs  mod.rs  node.rs  peer.rs  routing.rs
shared/src/tls/: cert.rs  config.rs  connection.rs  hybrid_config.rs  mod.rs
shared/src/utils/: mod.rs
src/: main.rs
