[package]
name = "terminal-chat"
version = "0.1.0"
edition = "2021"
authors = ["ilham alfath"]
description = "A modern terminal-based P2P chat application"
license = "MIT"

[[bin]]
name = "terminal-chat"
path = "src/main.rs"

[dependencies]
launcher = { path = "launcher" }
tokio = { version = "1.0", features = ["full"] }

[workspace]
members = [
    "launcher",
    "cli", 
    "p2p-core",
    "shared"
]
resolver = "2"
