[package]
name = "terminal-chat"
version = "0.1.0"
edition = "2021"
authors = ["ilham alfath"]
description = "A modern terminal-based P2P chat application"
license = "MIT"

[[bin]]
name = "terminal-chat"
path = "src/main.rs"

[dependencies]
launcher = { path = "launcher" }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }

[workspace]
members = [
    "launcher",
    "cli", 
    "p2p-core",
    "shared",
    "identity-gen"
]
resolver = "2"

# Optimization profiles
[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.dev]
opt-level = 0
debug = true
overflow-checks = true

# Fast development builds
[profile.dev.package."*"]
opt-level = 2
