[package]
name = "chat-client"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "chat-client"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.27"
uuid = { version = "1.0", features = ["v4"] }
ctrlc = "3.4"
dotenv = "0.15"
