[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# CLI libraries
clap = { version = "4.4", features = ["derive", "env"] }
indicatif = "0.17"
dialoguer = { version = "0.11", features = ["completion", "history"] }
colored = "2.0"
crossterm = "0.27"

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Base64 encoding
base64 = "0.22"

# Environment and configuration
dotenv = "0.15"

# Shared utilities
shared = { path = "../shared" }
p2p-core = { path = "../p2p-core" }
identity-gen = { path = "../identity-gen" }
