[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "terminal-chat"
path = "src/main.rs"

[dependencies]
# CLI module
cli = { path = "../cli" }

# Environment and logging
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# Terminal cleanup
ctrlc = "3.4"

# Shared utilities
shared = { path = "../shared" }
