[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "terminal-chat"
path = "src/main.rs"

[dependencies]
# CLI module
cli = { path = "../cli" }

# Identity generation
identity-gen = { path = "../identity-gen" }

# Environment and logging
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Async runtime
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "signal"] }

# Terminal cleanup
ctrlc = "3.4"

# Shared utilities
shared = { path = "../shared" }
