[package]
name = "p2p-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "p2p_core"
path = "src/lib.rs"

[[bin]]
name = "p2p-core"
path = "src/main.rs"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
crossterm = "0.27"
uuid = { version = "1.0", features = ["v4"] }
ctrlc = "3.4"
dotenv = "0.15"
# UI libraries (same as CLI)
dialoguer = { version = "0.11", features = ["completion", "history"] }
colored = "2.0"
indicatif = "0.17"
chrono = { version = "0.4", features = ["serde"] }
