[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tokio-rustls = "0.24"
rustls = { version = "0.21", features = ["dangerous_configuration"] }
rustls-pemfile = "1.0"
rcgen = "0.11"
time = { version = "0.3", features = ["macros"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
crossterm = "0.27"
