[package]
name = "shared"
version = "0.1.0"
edition = "2021"

[dependencies]
identity-gen = { path = "../identity-gen" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "time", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
tokio-rustls = "0.26"
rustls = { version = "0.23", features = ["ring", "std"] }
rustls-pki-types = "1.0"
rustls-post-quantum = "0.2"
rustls-pemfile = "1.0"
rcgen = "0.11"
time = { version = "0.3", features = ["macros"] }
uuid = { version = "1.0", features = ["v4"] }
tracing = "0.1"
crossterm = "0.27"

# Cryptography
aes-gcm = "0.10"
rand = "0.8"
sha2 = "0.10"

# Post-quantum cryptography
pqcrypto-kyber = "0.8"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"
